try to fix overflow issue

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -219,6 +219,14 @@ header {
       font-size: 20px;
       margin-top: 10px; }
 
+html {
+  height: 100%;
+  overflow: hidden; }
+
+body {
+  height: 100%;
+  overflow: hidden; }
+
 a {
   text-decoration: none; }
 
