--- a/public/scss/mobile/_general.scss
+++ b/public/scss/mobile/_general.scss
@@ -1,3 +1,6 @@
+html { height:100%; overflow:hidden; }
+body { height:100%; overflow:hidden; }
+
 a{
   text-decoration:none;
 }
